PPO COMMIT HEDGE IDK WORKS FOR THIS VERSION WOOOOOOOO

--- a/examples/analysis2.ipynb
+++ b/examples/analysis2.ipynb
@@ -308,14 +308,14 @@
    "source": [
     "for layer in range(13):\n",
     "    X = ppo_hidden_states[layer][test_idxs]\n",
-    "    # y = sft_generation_categories[:, 1][test_idxs]\n",
+    "    y = sft_generation_categories[:, 1][test_idxs]\n",
     "    y = ppo_generation_categories[:, 3][test_idxs]\n",
     "    reg = LogisticRegression(C=.1).fit(X[:2500], y[:2500])\n",
     "    print(layer)\n",
     "    print(reg.score(X[:2500], y[:2500]))\n",
     "    print(reg.score(X[2500:], y[2500:]))\n",
-    "    # print(reg.score(ppo_hidden_states[layer][ood_idxs], sft_generation_categories[:, 1][ood_idxs]))\n",
-    "    print(reg.score(ppo_hidden_states[layer][ood_idxs], ppo_generation_categories[:, 3][ood_idxs]))"
+    "    print(reg.score(ppo_hidden_states[layer][ood_idxs], sft_generation_categories[:, 1][ood_idxs]))\n",
+    "    # print(reg.score(ppo_hidden_states[layer][ood_idxs], ppo_generation_categories[:, 3][ood_idxs]))"
    ]
   },
   {
@@ -344,7 +344,12 @@
    "pygments_lexer": "ipython3",
    "version": "3.9.18"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "72a3fd4a13b86e2ebaa0e8e208d83864f5fab883245b2c176f0efba32410842e"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
