--- a/examples/analysis_sft2.ipynb
+++ b/examples/analysis_sft2.ipynb
@@ -615,7 +615,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "trlx",
+   "display_name": "Python 3.6.8 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -629,7 +629,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.6.8"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+   }
   }
  },
  "nbformat": 4,
