--- a/examples/analysis_trex_relations2questions.ipynb
+++ b/examples/analysis_trex_relations2questions.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import datasets\n",
     "import requests\n",
-    "from datasets import load_dataset\n",
+    "from datasets import load_dataset \n",
     "import numpy as np\n",
     "import openai\n",
     "from tqdm import tqdm"
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,11 +56,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "trex_train_relations = list(set(dataset2[\"train\"]['relation']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "base_prompt = \"\"\"Write a question using the provided relation, such that the question includes the head and the relation, and the question is the tail. Write the question such that the head is replaced with '[X]'. Answer with only the question.\n",
+    "\n",
+    "Examples\n",
+    "Relation: [Bank] is the central bank of [Country]\n",
+    "Question: What country is [X] the central bank of?\n",
+    "\n",
+    "Relation: [Country] is in [Continent]\n",
+    "Question: What sports team is [X] is member of?\n",
+    "\n",
+    "\n",
+    "FILL IN NOT TOTALLY DONE\n",
+    "\"\"\"\n",
+    "\n",
+    "# def get_prompt(relation, head, tail):\n",
+    "#     prompt = base_prompt\n",
+    "#     prompt = prompt.replace(\"[relation]\", relation)\n",
+    "#     prompt = prompt.replace(\"[head]\", head)\n",
+    "#     prompt = prompt.replace(\"[tail]\", tail)\n",
+    "#     return prompt\n"
    ]
   },
   {
