--- a/examples/analyze_bios_generation.ipynb
+++ b/examples/analyze_bios_generation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -574,17 +574,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "40\n",
-      "60\n",
-      "64\n",
-      "83\n"
+     "ename": "NameError",
+     "evalue": "name 'factscores' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 5\u001b[0m\n\u001b[1;32m      1\u001b[0m ratio_correct_all \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m      3\u001b[0m num_correct_all \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m----> 5\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m j \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(\u001b[43mfactscores\u001b[49m[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdecisions\u001b[39m\u001b[38;5;124m\"\u001b[39m])):\n\u001b[1;32m      6\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m (factscores[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdecisions\u001b[39m\u001b[38;5;124m\"\u001b[39m][j])\u001b[38;5;241m!=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m      7\u001b[0m         ratio_correct \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mmean([factscores[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdecisions\u001b[39m\u001b[38;5;124m\"\u001b[39m][j][i][\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mis_supported\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(factscores[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdecisions\u001b[39m\u001b[38;5;124m\"\u001b[39m][j]))])\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'factscores' is not defined"
      ]
     }
    ],
@@ -767,6 +768,46 @@
     "    else:\n",
     "        num_total_all.append(len(decison))\n",
     "        num_true_all.append(np.sum([fact[\"is_supported\"] for fact in decison]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.4425087108013937"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sum(num_true_all)/np.sum(num_total_all)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.56"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1-0.44"
    ]
   },
   {
